crates/plotnik-lib/tests/02-parser/recovery_validation/comma_in_node_children.txt
(node (a), (b))
------------------ DIAGNOSTICS -------------------
error: patterns are separated by whitespace
 --> query.ptk:1:10
  |
1 | (node (a), (b))
  |          ^
  |
help: remove the `,`
  |
1 - (node (a), (b))
1 + (node (a) (b))
  |
